--- a/config/.env.template
+++ b/config/.env.template
@@ -2,4 +2,11 @@ WATSONX_API_KEY=
 WATSONX_URL=
 WATSONX_PROJECT_ID=
 WATSONX_SPACE_ID=
-GEMINI_API_KEY=
+
+GOOGLE_API_KEY=
+
+QDRANT_API_KEY=
+QDRANT_COLLECTION_NAME=
+QDRANT_URL=
+
+COCOERE_API_KEY=
